--- a/style.css
+++ b/style.css
@@ -13,18 +13,31 @@ a {
 
 /* Header */
 header {
-  display: flex;
-  background-color: #00aeff;
-  margin: 0 auto;
-  justify-content: center;
+  position: relative;
 }
 
 .header_cont {
+  display: flex;
+  background-color: #00aeff;
+  margin: 0 auto;
+  width: 100%;
+  justify-content: center;
+}
+
+.web_nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   min-width: 90vw;
+}
+
+.mob_nav {
+  display: none;
+}
+
+.menu_cont {
+  display: none;
 }
 
 .logo_cnt {
@@ -119,6 +132,7 @@ ul {
 
 .contact p {
   font-size: 14px;
+  color: #191919;
 }
 
 .contact:hover {
@@ -156,7 +170,9 @@ ul {
   cursor: pointer;
 }
 
-.cur_drp.show, .acc_drp.show, .buk_drp.show  {
+.acc_drp.show,
+.cur_drp.show,
+.buk_drp.show {
   display: block;
 }
 
@@ -180,6 +196,7 @@ ul {
   right: 0;
   background-color: #ffffff;
   z-index: 100;
+  border-bottom: 1px solid #2c364349;
 }
 
 .buk_drp {
@@ -277,6 +294,7 @@ ul {
   cursor: pointer;
   font-size: 16px;
   font-weight: 400;
+  transition: background-color 0.6s ease-in-out, border 0.6s ease-in-out;
 }
 
 .acc_drp_cont button:hover {
@@ -318,7 +336,6 @@ ul {
 .hero_cnt {
   position: relative;
   width: 100%;
-  height: 370px;
 }
 
 .caption {
@@ -329,6 +346,7 @@ ul {
   color: #ffffff;
   text-align: center;
   z-index: 2;
+  width: 100%;
 }
 
 .caption h1 {
@@ -342,31 +360,17 @@ ul {
 }
 
 .img_cnt {
-  position: relative;
   width: 100%;
-  overflow: hidden;
   background-image: url("assets/v7-homepage1.jpg");
   background-size: cover;
   background-position: center;
-  height: 100%;
+  height: 50vh;
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  z-index: 1;
+  height: 50vh;
   background-color: #33333380;
-}
-
-.img_cnt img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: auto;
-  height: auto;
 }
 
 /* form styles */
@@ -382,7 +386,7 @@ ul {
   width: 100%;
   color: #4f4f4f;
   font-size: 14px;
-  z-index: 1000;
+  z-index: 2;
   justify-self: center;
   max-width: 80vw;
   margin: -60px auto 0;
@@ -440,6 +444,7 @@ ul {
   cursor: pointer;
   font-size: 16px;
   font-weight: 400;
+  transition: background-color 0.6s ease-in-out, border 0.6s ease-in-out;
 }
 
 .search_form button:hover {
@@ -454,7 +459,8 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 130px auto 0;
+  margin: 80px auto 0;
+  width: 100%;
   gap: 20px;
 }
 
@@ -490,6 +496,7 @@ ul {
 .pop_cap h3,
 .book_cap h3 {
   font-size: 24px;
+  text-align: center;
 }
 
 .dest_cap p,
@@ -498,6 +505,7 @@ ul {
 .book_cap p,
 .feat_cap1 p {
   font-size: 18px;
+  text-align: center;
 }
 
 .line {
@@ -523,13 +531,7 @@ ul {
   padding: 10px 10px;
   border-radius: 5px;
   gap: 10px;
-}
-
-.dest_card:hover,
-.dest_card:hover h5,
-.dest_card:hover p {
-  color: #ffffff;
-  background-color: #00aeff;
+  transition: background-color 0.6s ease-in-out;
 }
 
 .dest_card h5 {
@@ -546,8 +548,17 @@ ul {
   text-align: center;
 }
 
+.dest_card:hover {
+  background-color: #00aeff;
+}
+
+.dest_card:hover h5,
+.dest_card:hover p {
+  color: #ffffff;
+}
+
 .hotds {
-  max-width: 70vw;
+  max-width: 68vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -747,12 +758,13 @@ ul {
   cursor: pointer;
   font-size: 16px;
   font-weight: 400;
+  transition: background-color 0.6s ease-in-out, border 0.6s ease-in-out;
 }
 
 .hov_btn button:hover {
   background-color: #00aeff;
   color: #ffffff;
-  border: 1px solid #00aeff;
+  border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
@@ -805,10 +817,22 @@ ul {
 
 .newsltr_cap h3 {
   font-size: 28px;
+  text-align: center;
 }
 
 .newsltr_cap p {
   font-size: 16px;
+  text-align: center;
+}
+
+.news_form {
+  max-width: 600px;
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .news_form input {
@@ -820,14 +844,24 @@ ul {
   outline-width: 0;
 }
 
-.news_form {
-  max-width: 600px;
-  margin-top: 20px;
-  display: flex;
-  gap: 10px;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
+.news_form button {
+  background-color: #00aeff;
+  color: #ffffff;
+  border: 1px solid #00aeff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  transition: background-color 0.6s ease-in-out, border 0.6s ease-in-out;
+}
+
+.news_form button:hover {
+  background-color: #477da8;
+  color: #ffffff;
+  border: 1px solid #477da8;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 
 .feat {
@@ -869,6 +903,13 @@ ul {
   font-size: 16px;
   margin-top: 40px;
   font-weight: 400;
+  transition: background-color 0.6s ease-in-out, border 0.6s ease-in-out;
+}
+
+.feat_cont button:hover {
+  background-color: #477da8;
+  color: #ffffff;
+  border: 1px solid #477da8;
 }
 
 .app {
@@ -914,7 +955,14 @@ ul {
   margin-top: 10px;
 }
 
-.app_btn img {
+.img1 {
+  width: auto;
+  height: 58px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.img2 {
   width: auto;
   height: 58px;
   cursor: pointer;
@@ -1006,6 +1054,7 @@ ul {
   cursor: pointer;
   font-size: 16px;
   font-weight: 400;
+  transition: background-color 0.5s ease-in-out;
 }
 
 .sub_form button:hover {
@@ -1051,6 +1100,7 @@ ul {
   padding-bottom: 5px;
   border-bottom: 1px solid #e2e6e9;
 }
+
 .links ul li {
   font-size: 14px;
   color: #14acf2;
@@ -1082,4 +1132,403 @@ ul {
   font-size: 14px;
   color: #657279;
   padding: 20px 0;
+}
+
+.ft_mob {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .web_nav {
+    display: none;
+  }
+
+  .mob_nav {
+    display: flex;
+    background-color: #00aeff;
+    width: 100%;
+  }
+
+  .callxmenu {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 20px;
+  }
+
+  .mob_drp {
+    position: absolute;
+    border-radius: 5px;
+    width: 200px;
+    display: none;
+    top: 40px;
+    right: 40px;
+    background-color: #ffffff;
+    z-index: 100;
+  }
+
+  .arrow_mob {
+    position: absolute;
+    right: 22px;
+    top: -20px;
+    rotate: 180deg;
+    width: 20px;
+    height: 20px;
+    z-index: 100;
+  }
+
+  .mob_cnt {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 14px 0;
+    margin: 0 12px;
+  }
+
+  .menu_cont {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(25, 25, 25, 0.8);
+    display: flex;
+    justify-content: flex-end;
+    z-index: 1000;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+  }
+
+  .menu_cont.show {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .menu_cont .bg {
+    background: #ffffff;
+    height: 100%;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .menu_cont.show .bg {
+    transform: translateX(0);
+  }
+
+  .mob_drp.show {
+    display: block;
+  }
+
+  .bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    width: 80%;
+    height: 100vh;
+    background-color: #ffffff;
+  }
+
+  .dropdown h5 {
+    text-align: center;
+    font-size: 16px;
+    color: #191919;
+    line-height: 19px;
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+
+  .mob_cur {
+    background-color: #ffffff;
+    border: 1px solid #00aeff;
+    font-size: 16px;
+    padding: 10px;
+    transition: background-color 0.6s ease-in-out;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .mob_cur img {
+    width: 20px;
+    height: auto;
+  }
+
+  .mob_currency_note {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+  }
+
+  .mob_currency_note span {
+    color: #00aeff;
+    font-size: 16px;
+    font-weight: 400;
+    padding-right: 10px;
+  }
+
+  .mob_drp_cont {
+    position: relative;
+    display: flex;
+    padding: 20px 0 0 0;
+    gap: 15px;
+    flex-direction: column;
+  }
+
+  .mob_drp_cont p {
+    padding: 0 20px;
+  }
+
+  .mob_notes p {
+    color: #2c3643;
+    font-size: 14px;
+    font-weight: 400;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-right: 10px;
+    text-align: center;
+  }
+
+  .mob_notes p:hover {
+    background-color: #f2f2f2;
+  }
+
+  .mob_notes span {
+    margin-right: 10px;
+  }
+
+  #mob_act_cur p {
+    color: #ffffff !important;
+    background-color: #00aeff;
+  }
+
+  .mob_cur_drp {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+  }
+
+  .mob_cur_drp.show {
+    max-height: 300px; /* Adjust based on content height */
+  }
+  
+  .top {
+    background-color: #e4f0fa;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: end;
+    padding: 20px;
+  }
+
+  .bottom {
+    padding: 25px 35px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+
+  .login {
+    background-color: #ffffff;
+    color: #00aeff;
+    border: 1px solid #00aeff;
+    font-size: 16px;
+    padding: 10px;
+    transition: background-color 0.6s ease-in-out;
+    border-radius: 4px;
+  }
+
+  .login:hover {
+    background-color: #00aeff;
+    color: #ffffff;
+  }
+
+  .signup {
+    background-color: #00aeff;
+    color: #ffffff;
+    border: none;
+    font-size: 16px;
+    padding: 10px;
+    transition: background-color 0.6s ease-in-out;
+    border-radius: 4px;
+  }
+
+  .signup:hover {
+    background-color: #477da8;
+  }
+
+  .num {
+    width: 100%;
+    color: #ffffff;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .img_num {
+    display: flex;
+    gap: 10px;
+  }
+
+  .num_txt {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    gap: 10px;
+  }
+
+  .num img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .caption h1 {
+    font-size: 26px;
+  }
+
+  .caption p {
+    font-size: 14px;
+  }
+
+  .search_form {
+    background-color: #fafafa;
+    position: relative;
+    box-shadow: none;
+    padding: 25px;
+    max-width: none;
+    margin-top: 0;
+  }
+
+  .search {
+    width: 70%;
+  }
+
+  .calender {
+    display: none;
+  }
+
+  .search_form button {
+    width: 30%;
+    padding: 10px 5px;
+  }
+
+  .dest,
+  .hotds,
+  .pop {
+    margin-top: 80px;
+    max-width: none;
+  }
+
+  .dest_cont {
+    padding: 0 25px;
+  }
+
+  .hotds_cont {
+    padding: 0 35px;
+  }
+
+  .pop_cont {
+    padding: 0 18px;
+  }
+
+  .dest_cards {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  }
+
+  .book {
+    display: none;
+  }
+
+  .newsltr h3 {
+    font-size: 23px;
+  }
+
+  .news_form {
+    max-width: none;
+    padding: 0 25px;
+  }
+
+  .feat {
+    display: none;
+  }
+
+  .app {
+    max-width: none;
+  }
+
+  .app_cont {
+    flex-direction: column-reverse;
+    padding: 0 20px;
+    max-width: none;
+  }
+
+  .app_img {
+    width: 100%;
+  }
+
+  .app_cpt {
+    padding: 0 20px;
+    width: 100%;
+  }
+
+  .app_btn {
+    display: flex;
+    width: 100%;
+    gap: 10px;
+  }
+
+  .img1,
+  .img2 {
+    height: 48px;
+  }
+
+  .app_cpt h2 {
+    font-size: 30px;
+    margin-top: 20px;
+  }
+
+  .app_cpt p,
+  .app_cpt h2,
+  .app_cpt h3 {
+    width: 100%;
+  }
+
+  .sub {
+    display: none;
+  }
+
+  .ft_web {
+    display: none;
+  }
+
+  .ft_cont {
+    margin: 0;
+    width: 100%;
+    max-width: none;
+  }
+
+  .ft_mob {
+    background-color: #084482;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 16px;
+  }
+
+  .ft_mob p {
+    font-weight: 700;
+    margin-bottom: 30px;
+    font-size: 16px;
+    color: white;
+  }
+
+  .ft_mob span {
+    color: white;
+  }
 }
